# humix

./: Cargo.toml  Makefile  README.md
.cargo/: config.toml
humix/: Cargo.toml
humix/src/arch/x86_64/: mod.rs
humix/src/arch/x86_64/chr/: serial.rs  vga.rs
humix/src/arch/x86_64/interrupt/: idt.rs  keyboard.rs
humix/src/arch/x86_64/kernel/: init.rs  mod.rs  power.rs
humix/src/chr/: mod.rs
humix/src/kernel/: init.rs  panic.rs
humix_web/: Cargo.toml
humix_web/src/: lib.rs
src/: main.rs  vga.rs
src/arch/: mod.rs
src/arch/wasm32/: mod.rs
src/arch/x86_64/interrupt/: idt.rs  mod.rs  timer.rs
src/chr/: mod.rs  serial.rs  vga.rs
src/interrupt/: idt.rs  mod.rs  pic.rs  timer.rs
src/kernel/: init.rs  mod.rs  panic.rs
