[package]
name = "humix"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
build-command = ["build"]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-serial", "stdio"]

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"
pic8259 = "0.10.1"
x86_64 = "0.14.2"
uart_16550 = "0.2.18"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
