[package]
name = "humix"
version = "0.1.0"
edition = "2021"

[package.metadata.bootimage]
run-command = [
    "qemu-system-x86_64",
    "-drive", "format=raw,file={}",
    "-serial", "stdio",
    "-display", "none",
]

[dependencies]
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[target.'cfg(target_arch = "x86_64")'.dependencies]
bootloader = "0.9.8"
pic8259 = "0.10.1"
x86_64 = "0.14.2"
uart_16550 = "0.2.18"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wee_alloc = "0.4.5"
